--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -19,3 +19,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
 <link rel="stylesheet" href="{{ "https://res.cloudinary.com/jimmysong/raw/upload/rootsongjc-hugo/prism.css" | absURL }}" />
 -->
 {{ end }}
+{{ if isset .Site.Params "busuanzi" }}
+<!-- 不蒜子 -->
+<script async src="//cdn.busuanzi.ibruce.info/cdn/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+{{ end }}
