--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,5 +1,6 @@
+<!-- 此处修改生成TOC(文章目录)的字数阈值 -->
 {{ if not .Params.notoc }}
-  {{ if or .Params.toc (and (gt .WordCount 400 ) (ne .Params.toc "false")) }}
+  {{ if or .Params.toc (and (gt .WordCount 100 ) (ne .Params.toc "false")) }}
   <aside class="toc">
     {{ .TableOfContents }}
   </aside>
